@@ -47,7 +47,8 @@ public class FavoritesVFS extends VFS
 	//{{{ FavoritesVFS constructor
 	public FavoritesVFS()
 	{
-		super("favorites",DELETE_CAP | RENAME_CAP | LOW_LATENCY_CAP,
+		super("favorites",DELETE_CAP | RENAME_CAP | LOW_LATENCY_CAP
+			| NON_AWT_SESSION_CAP,
 			new String[] { EA_TYPE });
 
 		/* addToFavorites(), which is a static method
